# dsr-data-tools

./: CHANGELOG.md  COLUMN_OVERWRITE_FEATURE.md  INFO_METHOD_UPDATE_SUMMARY.md  INTERACTION_RECOMMENDATIONS.md  Makefile  README.md  RECOMMENDATION_MANAGER.md  RECOMMENDATION_MANAGER_EXPLORATION.md  create_summary.py  pyproject.toml  test_column_overwrite.py  test_individual_info_methods.py  test_info_methods.py
.github/workflows/: python-publish.yml  tests.yml
scripts/: benchmark_integer_checks.py
src/dsr_data_tools/: __init__.py  analysis.py  enums.py  preprocessing.py  recommendations.py
src/dsr_data_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README.md  __init__.py  conftest.py  test_analysis.py  test_preprocessing.py
tests/recommendations/: conftest.py  test_cleanup.py  test_conversions.py  test_engineering.py  test_manager.py
