[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsr-data-tools"
version = "2.2.2"
description = "Generic data handling utilities including data splitting and analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Scott Roberts", email = "scottrdeveloper@gmail.com" }]
keywords = ["data", "splitting", "analysis", "ml-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "dsr-files>=3.1.1",
    "dsr-utils>=1.4.0",
    "numpy>=2.4.4",
    "pandas>=2.2.0,<3.0.0",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
test = ["pytest>=9.0.3", "pytest-cov>=7.1.0"]
dev = ["dsr-data-tools[test]", "black>=26.3.1", "ruff>=0.15.9"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=src/dsr_data_tools --cov-report=html --cov-report=term-missing"

[tool.setuptools]
packages = ["dsr_data_tools"]

[tool.setuptools.package-dir]
"" = "src"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
